testfx/errors/error_tests/edge_47_no_main_func_forward.fx
// 测试：无main时函数前向引用（应该成功）
result := helper(10)
print(result)

helper := (x) {
    R> x * 2
}
